# carousels-repo2

./: .env.example  .gitignore  README.md  claude.md  findings.md  gemini.md  progress.md  pyproject.toml  style_coverage.md  task_plan.md
.tmp/: example_names.txt  review_feedback_audit.json  review_feedback_audit.md  style_coverage_manifest.json
.tmp/review-bundles/: studio-20260402-150945-745c16.json  studio-20260404-000925-739956.json
.tmp/studio/: state.json
architecture/: content_planning.md  figma_reference_strategy.md  image_pipeline.md  image_pipeline_sources.md  intake_and_queue.md  link_phase.md  plugin_renderer.md  studio_review.md
figma_plugin/: README.md  code.js  manifest.json  ui.html
notes/review_feedback/: README.md  studio-20260401-035139-3b954d.json  studio-20260401-035139-3b954d.md  studio-20260401-040011-f85d28.json  studio-20260401-040011-f85d28.md  studio-20260402-051308-2de79c.json  studio-20260402-051308-2de79c.md  studio-20260402-051529-685406.json  studio-20260402-051529-685406.md  studio-20260402-141710-4371a1.json  studio-20260402-141710-4371a1.md  studio-20260402-150945-745c16.json  studio-20260402-150945-745c16.md  studio-20260404-000925-739956.json  (+1 more)
studio_assets/: app.js  index.html  styles.css
tests/: test_quality_rules.py
tools/: apply_render_result.py  audit_review_feedback.py  audit_style_coverage.py  build_render_payload.py  check_figma_access.py  check_google_sheets.py  ensure_queue_sheet.py  fetch_images_for_job.py  plan_carousel.py  process_next_job.py  render_server.py  start_studio.py  studio_server.py
(+48 files in other folders)
